--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,3 +1,8 @@
-<app-sidenav></app-sidenav>
-<app-topnav></app-topnav>
-<app-screen></app-screen>
+<div class="flex ">
+    <app-sidenav></app-sidenav>
+    <div class="w-full max-h-screen">
+        <app-topnav></app-topnav>
+        <app-screen></app-screen>
+    </div>
+    
+</div>
