--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,4 +4,4 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import "~bootstrap-icons/font/bootstrap-icons.css"
+@import "~bootstrap-icons/font/bootstrap-icons.css";
