Added hamburger menu for sidenav

--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -1,4 +1,4 @@
-<div class="bg-gray-700 w-64 min-h-screen flex flex-col">
+<div *ngIf="isToggle === false" class="bg-gray-700 w-64 min-h-screen flex flex-col">
     <app-logo></app-logo>
     <div class="bg-gray-400 rounded-md w-11/12 h-0.5 mx-auto mt-4"></div>
     <div class="flex flex-col h-max flex-grow">
