Remove breakpoints in hamburger menu

--- a/src/app/components/topnav/topnav.component.html
+++ b/src/app/components/topnav/topnav.component.html
@@ -1,5 +1,5 @@
 <div class=" w-full h-[7.1rem] flex justify-between items-center pr-16 shadow-lg ">
-    <button (click)="onToggle()"><i class="bi bi-list cursor-pointer text-3xl ml-5 visible 2xl:invisible"></i></button>
+    <button (click)="onToggle()"><i class="bi bi-list cursor-pointer text-3xl ml-5"></i></button>
     <div class="flex items-center">
         <i class="bi bi-bell-fill text-2xl mr-4 cursor-pointer"></i>
         <div class="rounded-full  w-[3rem] h-[3rem] flex justify-center items-center mr-4 cursor-pointer">
