--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,55 +1,47 @@
-<div class="flex">
-
-    <div class="bg-gray-700 w-64 min-h-screen flex flex-col">
-        <div class="flex  justify-start items-center gap-4 pt-4 pl-4 ">
-            <div class="flex w-[5rem]">
-                <img class="rounded-full cursor-pointer" src="../../../assets/JS_Logo.png" alt="">
-            </div>
-            <div>
-                <p class="text-white text-3xl">JS</p>
-                <p class="text-white text-3xl">BSIT 3-2</p>
+<div class="bg-gray-200 w-full h-full max-h-screen">
+         <!-- logo -->
+        <div class="  h-[7.1rem] flex items-center bg-gray-700 pl-12 fixed w-full shadow-xl">
+            <div class="flex  justify-start items-center gap-4 ">
+                <div class="flex w-[5rem]">
+                    <img class="rounded-full cursor-pointer" src="../../../assets/JS_Logo.png" alt="">
+                </div>
+                <div>
+                    <p class="text-white text-3xl">JS</p>
+                    <p class="text-white text-3xl">BSIT 3-2</p>
+                </div>
             </div>
         </div>
-        <div class="bg-gray-400 rounded-md w-11/12 h-0.5 mx-auto mt-4"></div>    
-    </div>
-    
-<div class="flex-1 bg-gray-200">
-    <div class="  h-[7.1rem] flex justify-end items-center pr-16 shadow-lg bg-white">
-        <!-- <div class="flex items-center">
-            <a routerLink="/registration" class="text-lg font-bold cursor-pointer hover:text-gray-700 transition-all ">Register</a>
-        </div> -->
-    </div>
 
-    <div class="flex flex-col justify-center items-center bg-white mt-4 w-[30rem] mx-auto rounded-md py-4 px-8 border h-auto border-black">
-        <h1 class="font-bold text-3xl mt-2">Login</h1>
-        <div class="flex flex-col w-full px-8">
-            <form class="mt-8" action="">
-                <div class="flex flex-col">
-                    <label for="username">Username</label>
-                    <input class="border-b border-b-black py-2 px-1 mt-2 text-sm" id="username" name="username" type="text" placeholder="Type your username" required>
+        <div class="flex h-full justify-center items-center">
+            <div class="flex flex-col justify-center items-center bg-white mt-4 w-[30rem] mx-auto rounded-md py-4 px-8 border h-auto border-black">
+                <h1 class="font-bold text-3xl mt-2">Login</h1>
+                <div class="flex flex-col w-full px-8">
+                    <form class="mt-8" action="">
+                        <div class="flex flex-col">
+                            <label for="username">Username</label>
+                            <input class="border-b border-b-black py-2 px-1 mt-2 text-sm outline-none" id="username" name="username" type="text" placeholder="Type your username" required>
+                        </div>
+                        <div class="flex flex-col mt-8">
+                            <label for="password">Password</label>
+                            <input class="border-b border-b-black py-2 px-1 mt-2 text-sm outline-none" id="password" name="password" type="password" placeholder="Type your password" required>
+                        </div>
+                        <p class="ml-auto mt-4 text-xs w-28 cursor-pointer font-bold hover:text-gray-500 transition-all">Forgot password?</p>
+                        <button class="uppercase bg-gray-600 px-4 py-2.5 w-full mt-8 rounded-md text-sm hover:bg-gray-400 hover:text-black transition-all text-white">Login</button>
+                    </form>
+                    <div class="flex flex-col justify-center items-center mt-4">
+                        <p class="font-bold">Or Sign Up Using</p>
+                        <div class="flex gap-4 mt-4">
+                            <i class="bi bi-facebook text-blue-700 text-3xl cursor-pointer hover:scale-110 transition-all"></i>
+                            <i class="bi bi-google text-red-500 text-3xl cursor-pointer hover:scale-110 transition-all"></i>
+                            <i class="bi bi-github text-black text-3xl cursor-pointer hover:scale-110 transition-all"></i>
+                        </div>
+                    </div>
+        
+                    <div class="flex flex-col justify-center items-center my-8">
+                        <h1>Don't have account? <a routerLink="/registration" class="mt-2 underline">Click here to Register</a></h1>
+                        
+                    </div>
                 </div>
-                <div class="flex flex-col mt-8">
-                    <label for="password">Password</label>
-                    <input class="border-b border-b-black py-2 px-1 mt-2 text-sm" id="password" name="password" type="password" placeholder="Type your password" required>
-                </div>
-                <p class="ml-auto mt-4 text-xs w-28 cursor-pointer font-bold hover:text-gray-500 transition-all">Forgot password?</p>
-                <button class="uppercase bg-gray-600 px-4 py-2.5 w-full mt-8 rounded-md text-sm hover:bg-gray-400 hover:text-black transition-all text-white">Login</button>
-            </form>
-            <div class="flex flex-col justify-center items-center mt-4">
-                <p class="font-bold">Or Sign Up Using</p>
-                <div class="flex gap-4 mt-4">
-                    <i class="bi bi-facebook text-blue-700 text-3xl cursor-pointer hover:scale-110 transition-all"></i>
-                    <i class="bi bi-google text-red-500 text-3xl cursor-pointer hover:scale-110 transition-all"></i>
-                    <i class="bi bi-github text-black text-3xl cursor-pointer hover:scale-110 transition-all"></i>
-                </div>
-            </div>
-
-            <div class="flex flex-col justify-center items-center mt-16">
-                <h1>Don't have account?</h1>
-                <a routerLink="/registration" class="mt-2 underline">Click here to Register</a>
             </div>
         </div>
-    </div>
-</div>
-    
 </div>
