--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,25 +1,18 @@
-<div class="flex">
+<div class="bg-gray-200 w-full h-full max-h-screen">
+    <!-- logo -->
+   <div class="  h-[7.1rem] flex items-center bg-gray-700 pl-12 fixed w-full shadow-xl">
+       <div class="flex  justify-start items-center gap-4 ">
+           <div class="flex w-[5rem]">
+               <img class="rounded-full cursor-pointer" src="../../../assets/JS_Logo.png" alt="">
+           </div>
+           <div>
+               <p class="text-white text-3xl">JS</p>
+               <p class="text-white text-3xl">BSIT 3-2</p>
+           </div>
+       </div>
+   </div>
 
-    <div class="bg-gray-700 w-64 min-h-screen flex flex-col">
-        <div class="flex  justify-start items-center gap-4 pt-4 pl-4 ">
-            <div class="flex w-[5rem]">
-                <img class="rounded-full cursor-pointer" src="../../../assets/JS_Logo.png" alt="">
-            </div>
-            <div>
-                <p class="text-white text-3xl">JS</p>
-                <p class="text-white text-3xl">BSIT 3-2</p>
-            </div>
-        </div>
-        <div class="bg-gray-400 rounded-md w-11/12 h-0.5 mx-auto mt-4"></div>    
-    </div>
-    
-<div class="flex-1 bg-gray-200">
-    <div class="  h-[7.1rem] flex justify-end items-center pr-16 shadow-lg bg-white">
-        <!-- <div class="flex items-center">
-            <a routerLink="/registration" class="text-lg font-bold cursor-pointer hover:text-gray-700 transition-all ">Register</a>
-        </div> -->
-    </div>
-
+   <div class="flex h-full justify-center items-center">
     <div class="flex flex-col justify-center items-center bg-white mt-4 w-[30rem] mx-auto rounded-md py-8 pb-16 px-8 border h-auto border-black">
         <h1 class="font-bold text-3xl mt-2">Sign Up</h1>
         <div class="flex flex-col w-full px-8">
@@ -36,11 +29,10 @@
                     <label for="confirm-password">Confirm Password</label>
                     <input class="border-b border-b-black py-2 px-1 mt-2 text-sm" id="confirm-password" name="confirm-password" type="password" placeholder="Confirm your password " required>
                 </div>
-                
-                <button routerLink="/dashboard" class="uppercase bg-gray-600 px-4 py-2.5 w-full mt-8 rounded-md text-sm hover:bg-gray-400 hover:text-black transition-all text-white">Sign Up</button>
+                <button type="submit" class="uppercase bg-gray-600 px-4 py-2.5 w-full mt-8 rounded-md text-sm hover:bg-gray-400 hover:text-black transition-all text-white">Sign Up</button>
+                <p class="mt-8 text-center">Already have an account? <a routerLink="/login" class="underline">Log in Here</a></p>
             </form>
         </div>
     </div>
-</div>
-    
+   </div>
 </div>
