--- a/src/app/components/topnav/topnav.component.html
+++ b/src/app/components/topnav/topnav.component.html
@@ -1,4 +1,4 @@
-<div class=" w-full h-[7.1rem] flex justify-between items-center pr-16 shadow-lg ">
+<div class=" w-full h-[7.1rem] flex justify-between items-center pr-16 shadow-2xl ">
     <button (click)="onToggle()"><i class="bi bi-list cursor-pointer text-3xl ml-5"></i></button>
     <div class="flex items-center">
         <i class="bi bi-bell-fill text-2xl mr-4 cursor-pointer"></i>
