--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
-<div class="bg-gray-200 w-full h-full max-h-screen">
+<div class="bg-gray-200 w-full h-full min-h-screen">
          <!-- logo -->
-        <div class="  h-[7.1rem] flex items-center bg-gray-700 pl-12 fixed w-full shadow-xl">
+        <div class="  h-[7.1rem] flex items-center bg-gray-700 pl-12 w-full shadow-xl">
             <div class="flex  justify-start items-center gap-4 ">
                 <div class="flex w-[5rem]">
                     <img class="rounded-full cursor-pointer" src="../../../assets/JS_Logo.png" alt="">
@@ -12,7 +12,7 @@
             </div>
         </div>
 
-        <div class="flex h-full justify-center items-center">
+        <div class="flex mt-[5em] justify-center items-center">
             <div class="flex flex-col justify-center items-center bg-white mt-4 w-[30rem] mx-auto rounded-md py-4 px-8 border h-auto border-black">
                 <h1 class="font-bold text-3xl mt-2">Login</h1>
                 <div class="flex flex-col w-full px-8">
