--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,8 +12,8 @@
             </div>
         </div>
 
-        <div class="flex mt-[5em] justify-center items-center">
-            <div class="flex flex-col justify-center items-center bg-white mt-4 w-[30rem] mx-auto rounded-md py-4 px-8 border h-auto border-black">
+        <div class="flex mt-[5em] justify-center items-center ">
+            <div class="flex flex-col justify-center items-center bg-white mt-4 w-[30rem] mx-auto rounded-md py-4 px-8 border h-auto border-black shadow-2xl">
                 <h1 class="font-bold text-3xl mt-2">Login</h1>
                 <div class="flex flex-col w-full px-8">
                     <form class="mt-8" action="">
