--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -13,7 +13,7 @@
    </div>
 
    <div class="flex mt-[5em] justify-center items-center">
-    <div class="flex flex-col justify-center items-center bg-white mt-4 w-[30rem] mx-auto rounded-md py-8 pb-16 px-8 border h-auto border-black">
+    <div class="flex flex-col justify-center items-center bg-white mt-4 w-[30rem] mx-auto rounded-md py-8 pb-16 px-8 border h-auto border-black shadow-2xl">
         <h1 class="font-bold text-3xl mt-2">Sign Up</h1>
         <div class="flex flex-col w-full px-8">
             <form class="mt-8" action="">
