--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -19,15 +19,15 @@
             <form class="mt-8" action="">
                 <div class="flex flex-col">
                     <label for="username">Username</label>
-                    <input class="border-b border-b-black py-2 px-1 mt-2 text-sm" id="username" name="username" type="text" placeholder="Type your username" required>
+                    <input class="border-b border-b-black py-2 px-1 mt-2 text-sm outline-none" id="username" name="username" type="text" placeholder="Type your username" required>
                 </div>
                 <div class="flex flex-col mt-8">
                     <label for="password">Password</label>
-                    <input class="border-b border-b-black py-2 px-1 mt-2 text-sm" id="password" name="password" type="password" placeholder="Type your password" required>
+                    <input class="border-b border-b-black py-2 px-1 mt-2 text-sm outline-none" id="password" name="password" type="password" placeholder="Type your password" required>
                 </div>
                 <div class="flex flex-col mt-8">
                     <label for="confirm-password">Confirm Password</label>
-                    <input class="border-b border-b-black py-2 px-1 mt-2 text-sm" id="confirm-password" name="confirm-password" type="password" placeholder="Confirm your password " required>
+                    <input class="border-b border-b-black py-2 px-1 mt-2 text-sm outline-none" id="confirm-password" name="confirm-password" type="password" placeholder="Confirm your password " required>
                 </div>
                 <button type="submit" class="uppercase bg-gray-600 px-4 py-2.5 w-full mt-8 rounded-md text-sm hover:bg-gray-400 hover:text-black transition-all text-white">Sign Up</button>
                 <p class="mt-8 text-center">Already have an account? <a routerLink="/login" class="underline">Log in Here</a></p>
