--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -1,9 +1,1 @@
-<div class="grid grid-cols-3 w-1/2 mx-auto gap-5 mt-5">
-    <app-card></app-card>
-    <app-card></app-card>
-    <app-card></app-card>
-    <app-card></app-card>
-    <app-card></app-card>
-    <app-card></app-card>
-</div>
-
+<p>dashboard works!</p>
