--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,7 +1,7 @@
 <div class="flex min-h-screen">
     <app-sidenav [isToggle]="isToggle" class=""></app-sidenav>
     <div class="w-full min-h-screen flex flex-col">
-        <app-topnav (onToggleSideBar)="onToggleBar($event)"></app-topnav>
+        <app-topnav (onToggleSideBar)="onToggleBar()"></app-topnav>
         <div class="flex-1">
             <app-screen></app-screen>
         </div>
