Add User Management layout

--- a/src/app/layout/user-management/user-management.component.html
+++ b/src/app/layout/user-management/user-management.component.html
@@ -1,1 +1,66 @@
-<p>user-management works!</p>
+<div class="w-full flex h-full bg-gray-200">
+    <!--  -->
+    <div class="h-full w-[300px] p-8">
+        <div class="p-4 flex gap-4">
+            <!-- Logo -->
+            <div class="w-[30%]">
+                <img class="rounded-full cursor-pointer" src="../../../assets/profile pic.jpg" alt="">
+            </div>
+            <!-- username -->
+            <div class="flex flex-col justify-center">
+                <h1 class="font-bold">justinesantos</h1>
+                <div class="flex gap-1">
+                    <i class="bi bi-pencil-fill"></i>
+                    <p class="cursor-pointer">Edit Profile</p>
+                </div>
+            </div>
+        </div>
+        <!-- Links -->
+        <div class="w-full bg-gray-300 h-[1px] "></div>
+        <div class="flex-1 py-4 flex flex-col mt-2">
+            <!-- My Account Link -->
+            <div class="flex flex-col">
+                <div class="flex items-center gap-3">
+                    <i class="bi bi-person text-2xl"></i>
+                    <h1 class="font-bold cursor-pointer hover:text-gray-400 transition-all">My Account</h1>
+                </div>
+                <div class="flex flex-col pl-9 mt-2 gap-1">
+                    <p class="cursor-pointer hover:text-gray-400 transition-all">Profile</p>
+                    <p class="cursor-pointer hover:text-gray-400 transition-all">Banks & Cards</p>
+                    <p class="cursor-pointer hover:text-gray-400 transition-all">Addresses</p>
+                    <p class="cursor-pointer hover:text-gray-400 transition-all">Change Password</p>
+                </div>
+            </div>
+
+            <!-- Puchase or Sell -->
+            <div class="flex flex-col mt-2">
+                <div class="flex items-center gap-3">
+                    <i class="bi bi-clipboard2 text-2xl"></i>
+                    <h1 class="font-bold cursor-pointer hover:text-gray-400 transition-all">My Purchase/Sell</h1>
+                </div>
+                <div>
+                    
+                </div>
+            </div>
+            <!-- Notification -->
+            <div class="flex flex-col mt-2">
+                <div class="flex items-center gap-3">
+                    <i class="bi bi-bell text-2xl"></i>
+                    <h1 class="font-bold cursor-pointer hover:text-gray-400 transition-all">Notification</h1>
+                </div>
+                <div>
+                    
+                </div>
+            </div>
+        </div>
+        
+    </div>
+
+    <!--  -->
+    <div class="flex-1 flex justify-center p-4">
+        <div class="bg-white border border-gray-300 shadow-xl w-[80%] h-[80%] rounded-md p-4 flex flex-col">
+            <app-my-account></app-my-account>
+        </div>
+        
+    </div>
+</div>
