--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -26,7 +26,7 @@
         
         <a class="flex mt-4 gap-2 pl-2 py-1 items-center cursor-pointer w-[90%] mx-auto rounded-lg hover:bg-red-600 transition-all ">
             <i class="bi bi-box-arrow-left text-white text-lg"></i>
-            <p class="text-white text-base">Logout</p>
+            <p routerLink="/login" class="text-white text-base">Logout</p>
         </a>
     </div>
 </div>
