--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,6 @@
 @tailwind components;
 @tailwind utilities;
 @import "~bootstrap-icons/font/bootstrap-icons.css";
+body::-webkit-scrollbar{
+    display: none;
+  }
