--- a/src/app/layout/dashboard/latest-costumer-card/latest-costumer-card.component.html
+++ b/src/app/layout/dashboard/latest-costumer-card/latest-costumer-card.component.html
@@ -1,7 +1,7 @@
 <div class="w-full max-w-md p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-8 dark:bg-gray-800 dark:border-gray-700">
     <div class="flex items-center justify-between mb-4">
         <h5 class="text-xl font-bold leading-none text-gray-900 dark:text-white">Latest Customers</h5>
-        <a class="text-sm font-medium text-blue-600 hover:underline dark:text-blue-500 cursor-pointer">
+        <a class="text-sm font-medium text-blue-600 hover:underline dark:text-blue-500 cursor-pointer" (click)="onClickModal()">
             View all
         </a>
    </div>
