--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="w-full h-full flex flex-col p-8">
+<div class="w-full h-full flex flex-col py-8 pl-36">
     <div class="flex gap-4 justify-between">
         <div class="flex gap-4">
             <div class="bg-green-300 w-[250px] h-[150px] flex justify-center items-center gap-6 rounded shadow-md border border-gray-300 cursor-pointer transition-all hover:bg-green-200">
